Refactored the messagebundle content

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,31 +1,33 @@
 {
-  "PORTRAIT": {
-    "PORTRAIT": "Portrait"
-  },
-  "IDENTITY": {
-    "IDENTITY": "Identity",
-    "NAME": "Name",
-    "TITLE": "Title",
-    "RELIGION": "Religion"
-  },
-  "PLAYER_INFORMATION": {
-    "PLAYER_INFORMATION": "Player Information",
-    "PLAYER": "Player",
-    "CAMPAIGN": "Campaign",
-    "CREATED_ON": "Created on"
-  },
-  "DESCRIPTION": {
-    "DESCRIPTION": "Description"
-  },
-  "POINTS": {
-    "POINTS": "Points",
-    "RACE": "Race",
-    "ATTRIBUTES": "Attributes",
-    "ADVANTAGES": "Advantages",
-    "DISADVANTAGES": "Disadvantages",
-    "QUIRKS": "Quirks",
-    "SKILLS": "Skills",
-    "SPELLS": "Spells",
-    "EARNED": "Earned"
+  "SHEET": {
+    "PORTRAIT": {
+      "PORTRAIT": "Portrait"
+    },
+    "IDENTITY": {
+      "IDENTITY": "Identity",
+      "NAME": "Name",
+      "TITLE": "Title",
+      "RELIGION": "Religion"
+    },
+    "PLAYER_INFORMATION": {
+      "PLAYER_INFORMATION": "Player Information",
+      "PLAYER": "Player",
+      "CAMPAIGN": "Campaign",
+      "CREATED_ON": "Created on"
+    },
+    "DESCRIPTION": {
+      "DESCRIPTION": "Description"
+    },
+    "POINTS": {
+      "POINTS": "Points",
+      "RACE": "Race",
+      "ATTRIBUTES": "Attributes",
+      "ADVANTAGES": "Advantages",
+      "DISADVANTAGES": "Disadvantages",
+      "QUIRKS": "Quirks",
+      "SKILLS": "Skills",
+      "SPELLS": "Spells",
+      "EARNED": "Earned"
+    }
   }
 }
