Changed the menu icon and its content

--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -1,5 +1,12 @@
 {
   "APPLICATION": "GurpsyMcGurpsFace",
+  "MENU": {
+    "OPEN": "Open..."
+  },
+  "SETTINGS": {
+    "LANGUAGE": "Taal",
+    "THEME": "Thema"
+  },
   "SHEET": {
     "PORTRAIT": {
       "PORTRAIT": "Punten"
