--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,5 +1,12 @@
 {
   "APPLICATION": "GurpsyMcGurpsFace",
+  "MENU": {
+    "OPEN": "Open..."
+  },
+  "SETTINGS":{
+    "LANGUAGE": "Language",
+    "THEME": "Theme"
+  },
   "SHEET": {
     "PORTRAIT": {
       "PORTRAIT": "Portrait"
