Pimping the sidenav

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -6,10 +6,10 @@
     "OPEN": "Open..."
   },
   "SETTINGS": {
+    "SHEETVIEW": "Sheetview",
+    "SETTINGS": "Settings",
     "LANGUAGE": "Language",
-    "LANGUAGE_SELECT": "Select...",
-    "THEME": "Theme",
-    "THEME_SELECT": "Select..."
+    "THEME": "Theme"
   },
   "SHEET": {
     "SUBJECT": {
