--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -6,6 +6,8 @@
     "OPEN": "Open..."
   },
   "SETTINGS": {
+    "SHEETVIEW": "Sheetview",
+    "SETTINGS": "Settings",
     "LANGUAGE": "Taal",
     "THEME": "Thema"
   },
