Fixed wrong translation

--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -21,7 +21,7 @@
       "MAGIC": "Magie"
     },
     "PORTRAIT": {
-      "PORTRAIT": "Punten"
+      "PORTRAIT": "Portret"
     },
     "IDENTITY": {
       "IDENTITY": "Identiteit",
