Rrefactor the side navigation

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -7,9 +7,7 @@
   },
   "SETTINGS": {
     "SHEETVIEW": "Sheetview",
-    "SETTINGS": "Settings",
-    "LANGUAGE": "Language",
-    "THEME": "Theme"
+    "SETTINGS": "Settings"
   },
   "SHEET": {
     "SUBJECT": {
