--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -7,9 +7,7 @@
   },
   "SETTINGS": {
     "SHEETVIEW": "Sheetview",
-    "SETTINGS": "Settings",
-    "LANGUAGE": "Taal",
-    "THEME": "Thema"
+    "SETTINGS": "Settings"
   },
   "SHEET": {
     "SUBJECT":{
