Cleaned up the themes model object

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,6 +1,8 @@
 {
   "en": "English",
   "nl": "Dutch",
+  "default": "Default",
+  "darcula": "Darcula",
   "APPLICATION": "GurpsyMcGurpsFace",
   "MENU": {
     "OPEN": "Open..."
