--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -1,6 +1,8 @@
 {
   "en": "Engels",
   "nl": "Nederlands",
+  "default": "Standaard",
+  "darcula": "Darcula",
   "APPLICATION": "GurpsyMcGurpsFace",
   "MENU": {
     "OPEN": "Open..."
