Added a new entry into the menu for clearing local data

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,8 +4,11 @@
   "default": "Default",
   "darcula": "Darcula",
   "APPLICATION": "GurpsyMcGurpsFace",
+  "OK": "Ok",
+  "CANCEL": "Cancel",
   "MENU": {
-    "OPEN": "Open..."
+    "OPEN": "Open...",
+    "CLEAR_SETTINGS": "Clear settings"
   },
   "SETTINGS": {
     "SHEETVIEW": "Sheetview",
