--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -4,8 +4,15 @@
   "default": "Standaard",
   "darcula": "Darcula",
   "APPLICATION": "GurpsyMcGurpsFace",
-  "OK": "Ok",
-  "CANCEL": "Cancel",
+  "DIALOG": {
+    "OK": "Ja",
+    "CANCEL": "Annuleer",
+    "DELETE_SETTINGS": {
+      "HEADER": "Verwijder lokaal opgeslagen instellingen",
+      "BODY": "Dit zal alle lokaal opgeslagen instellingen verwijderen en daarme teruggaan naar de default instellingen. Lokaal opgeslagen Character Sheets zullen niet worden verwijderd?",
+      "CONFIRMATION": "Weet u zeker dat u wilt doorgaan?"
+    }
+  },
   "MENU": {
     "OPEN": "Open...",
     "CLEAR_SETTINGS": "Verwijder instelling"
