Added elemenairy dialog for opening a new characer sheet

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -11,6 +11,9 @@
       "HEADER": "Delete locally stored settings",
       "BODY": "This will delete all locally stored settings and will revert to the default settings. Locally stored Character Sheets will not be deleted.",
       "CONFIRMATION": "Are you sure you wish to continue?"
+    },
+    "OPEN_SHEET": {
+      "HEADER": "Open Character Sheet"
     }
   },
   "MENU": {
