--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -9,7 +9,7 @@
     "CANCEL": "Annuleer",
     "DELETE_SETTINGS": {
       "HEADER": "Verwijder lokaal opgeslagen instellingen",
-      "BODY": "Dit zal alle lokaal opgeslagen instellingen verwijderen en daarme teruggaan naar de default instellingen. Lokaal opgeslagen Character Sheets zullen niet worden verwijderd?",
+      "BODY": "Dit zal alle lokaal opgeslagen instellingen verwijderen en daarmee teruggaan naar de default instellingen. Lokaal opgeslagen Character Sheets zullen niet worden verwijderd?",
       "CONFIRMATION": "Weet u zeker dat u wilt doorgaan?"
     },
     "OPEN_SHEET": {
@@ -18,7 +18,7 @@
   },
   "MENU": {
     "OPEN": "Open...",
-    "CLEAR_SETTINGS": "Verwijder instelling"
+    "CLEAR_SETTINGS": "Verwijder instellingen"
   },
   "SETTINGS": {
     "SHEETVIEW": "Sheetview",
