Added menu item for switching theme

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -18,6 +18,8 @@
   },
   "MENU": {
     "OPEN": "Open...",
+    "DARK_THEME" : "Night mode",
+    "LIGHT_THEME" : "Day mode",
     "CLEAR_SETTINGS": "Clear settings"
   },
   "SETTINGS": {
