--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -17,7 +17,10 @@
     }
   },
   "MENU": {
+
     "OPEN": "Open...",
+    "DARK_THEME" : "Nachtmodus",
+    "LIGHT_THEME" : "Dagmodus",
     "CLEAR_SETTINGS": "Verwijder instellingen"
   },
   "SETTINGS": {
