Add slide toggles for language and theme selection

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -19,7 +19,7 @@
   "MENU": {
     "OPEN": "Open...",
     "DARK_THEME" : "Night mode",
-    "LIGHT_THEME" : "Day mode",
+    "LANGUAGE": "Dutch",
     "CLEAR_SETTINGS": "Clear settings"
   },
   "SHEET": {
