Moved the model creation. first steps for using external model file

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -17,7 +17,7 @@
     }
   },
   "MENU": {
-    "OPEN": "Open...",
+    "OPEN": "Open sheet",
     "DARK_THEME" : "Night mode",
     "LANGUAGE": "Dutch",
     "CLEAR_SETTINGS": "Clear settings"
