--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -17,7 +17,7 @@
     }
   },
   "MENU": {
-    "OPEN": "Open...",
+    "OPEN": "Open sheet",
     "DARK_THEME" : "Nachtmodus",
     "LANGUAGE": "Nederlands",
     "CLEAR_SETTINGS": "Verwijder instellingen"
