Added basic tab to the open file dialog.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -13,6 +13,8 @@
       "CONFIRMATION": "Are you sure you wish to continue?"
     },
     "OPEN_SHEET": {
+      "FROM_FILE":"From file",
+      "PREVIOUSLY": "Previously opened",
       "HEADER": "Open Character Sheet"
     }
   },
