Some work in progress regarding the delete dialog and stored sheets

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -7,10 +7,12 @@
   "DIALOG": {
     "OK": "Yes",
     "CANCEL": "Cancel",
-    "DELETE_SETTINGS": {
+    "DELETE_DATA": {
       "HEADER": "Delete locally stored settings",
       "BODY": "This will delete all locally stored settings and will revert to the default settings. Locally stored Character Sheets will not be deleted.",
-      "CONFIRMATION": "Are you sure you wish to continue?"
+      "SHEETS": "Stored Character Sheets",
+      "CONFIRMATION": "Are you sure you wish to continue?",
+      "DELETE" : "Delete"
     },
     "OPEN_SHEET": {
       "FROM_FILE":"From file",
