--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -8,19 +8,19 @@
     "DELETE_DATA": {
       "HEADER": "Verwijder lokaal opgeslagen gegevens",
       "SHEETS": "Opgeslagen Character Sheets",
-      "LANGUAGE" : "Verwijder Taalinstelling",
-      "THEME" : "Verwijder Themainstelling",
-      "DELETE" : "Verwijder"
+      "LANGUAGE": "Verwijder Taalinstelling",
+      "THEME": "Verwijder Themainstelling",
+      "DELETE": "Verwijder"
     },
     "OPEN_SHEET": {
-      "FROM_FILE":"Bestand",
+      "FROM_FILE": "Bestand",
       "PREVIOUSLY": "Eerder geopend",
       "HEADER": "Open Character Sheet"
     }
   },
   "MENU": {
     "OPEN": "Open sheet",
-    "DARK_THEME" : "Nachtmodus",
+    "DARK_THEME": "Nachtmodus",
     "LANGUAGE": "Nederlands",
     "CLEAR_SETTINGS": "Verwijder instellingen"
   },
@@ -62,5 +62,8 @@
       "SPELLS": "Spells",
       "EARNED": "Verdiend"
     }
+  },
+  "MESSAGE": {
+    "SHEET_LOADED": "Character Sheet geladen: {{value}}"
   }
 }
