Added a first draft of a body component

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -42,6 +42,7 @@
       "TITLE": "Title",
       "RELIGION": "Religion"
     },
+    "NOTES": "Notes",
     "PLAYER_INFORMATION": {
       "PLAYER_INFORMATION": "Player Information",
       "PLAYER": "Player",
