--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -42,6 +42,7 @@
       "TITLE": "Titel",
       "RELIGION": "Religie"
     },
+    "NOTES" : "Notities",
     "PLAYER_INFORMATION": {
       "PLAYER_INFORMATION": "Speler Informatie",
       "PLAYER": "Speler",
