--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "en": "English",
   "nl": "Dutch",
+  "ADVANTAGES": "Advantages",
   "APPLICATION": "GurpsyMcGurpsFace",
   "DIALOG": {
     "OK": "Yes",
@@ -18,6 +19,8 @@
       "HEADER": "Open Character Sheet"
     }
   },
+  "DISADVANTAGES": "Disadvantages",
+  "EQUIPMENT": "Equipment",
   "MENU": {
     "OPEN": "Open sheet",
     "DARK_THEME": "Night mode",
@@ -59,6 +62,8 @@
       "PORTRAIT": "Portrait"
     }
   },
+  "SKILLS": "Skills",
+  "SPELLS": "Spells",
   "SUBJECT": {
     "ATTRIBUTES": "Attributes",
     "SKILLS": "Skills",
