--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -1,6 +1,7 @@
 {
   "en": "Engels",
   "nl": "Nederlands",
+  "ADVANTAGES": "Advantages",
   "APPLICATION": "GurpsyMcGurpsFace",
   "DIALOG": {
     "OK": "Ja",
@@ -18,6 +19,8 @@
       "HEADER": "Open Character Sheet"
     }
   },
+  "DISADVANTAGES": "Disadvantages",
+  "EQUIPMENT": "Materialen",
   "MENU": {
     "OPEN": "Open sheet",
     "DARK_THEME": "Nachtmodus",
@@ -37,7 +40,7 @@
       "TITLE": "Titel",
       "RELIGION": "Religie"
     },
-    "NOTES" : "Notities",
+    "NOTES": "Notities",
     "PLAYER_INFORMATION": {
       "PLAYER_INFORMATION": "Speler Informatie",
       "PLAYER": "Speler",
@@ -59,6 +62,8 @@
       "PORTRAIT": "Portret"
     }
   },
+  "SKILLS": "Skills",
+  "SPELLS": "Spreuken",
   "SUBJECT": {
     "ATTRIBUTES": "Attributes",
     "SKILLS": "Skills",
@@ -67,5 +72,4 @@
     "NOTES": "Notities",
     "MAGIC": "Magie"
   }
-
 }
