--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -30,45 +30,45 @@
   "SHEET": {
     "ADVANTAGES": "Advantages",
     "DESCRIPTION": {
-      "AGE": "Age",
-      "BIRTHDAY": "Birthday",
+      "AGE": "Age:",
+      "BIRTHDAY": "Birthday:",
       "DESCRIPTION": "Description",
-      "EYES": "Eyes",
-      "GENDER": "Gender",
-      "HAIR": "Hair",
-      "HAND": "Hand",
-      "HEIGHT": "Height",
-      "RACE": "Race",
-      "SIZE": "Size",
-      "SKIN": "Skin",
-      "TL": "TL",
-      "WEIGHT": "Weight"
+      "EYES": "Eyes:",
+      "GENDER": "Gender:",
+      "HAIR": "Hair:",
+      "HAND": "Hand:",
+      "HEIGHT": "Height:",
+      "RACE": "Race:",
+      "SIZE": "Size:",
+      "SKIN": "Skin:",
+      "TL": "TL:",
+      "WEIGHT": "Weight:"
     },
     "DISADVANTAGES": "Disadvantages",
     "EQUIPMENT": "Equipment",
     "IDENTITY": {
       "IDENTITY": "Identity",
-      "NAME": "Name",
-      "TITLE": "Title",
-      "RELIGION": "Religion"
+      "NAME": "Name:",
+      "TITLE": "Title:",
+      "RELIGION": "Religion:"
     },
     "NOTES": "Notes",
     "PLAYER_INFORMATION": {
       "PLAYER_INFORMATION": "Player Information",
-      "PLAYER": "Player",
-      "CAMPAIGN": "Campaign",
-      "CREATED_ON": "Created on"
+      "PLAYER": "Player:",
+      "CAMPAIGN": "Campaign:",
+      "CREATED_ON": "Created on:"
     },
     "POINTS": {
       "POINTS": "Points",
-      "RACE": "Race",
-      "ATTRIBUTES": "Attributes",
-      "ADVANTAGES": "Advantages",
-      "DISADVANTAGES": "Disadvantages",
-      "QUIRKS": "Quirks",
-      "SKILLS": "Skills",
-      "SPELLS": "Spells",
-      "EARNED": "Earned"
+      "RACE": "Race:",
+      "ATTRIBUTES": "Attributes:",
+      "ADVANTAGES": "Advantages:",
+      "DISADVANTAGES": "Disadvantages:",
+      "QUIRKS": "Quirks:",
+      "SKILLS": "Skills:",
+      "SPELLS": "Spells:",
+      "EARNED": "Earned:"
     },
     "PORTRAIT": {
       "PORTRAIT": "Portrait"
