Added a general body component

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -77,7 +77,7 @@
     "SPELLS": "Spells"
   },
   "SUBJECT": {
-    "ATTRIBUTES": "Attributes",
+    "GENERAL": "General",
     "SKILLS": "Skills",
     "DIS_ADVANTAGES": "(Dis)Advantages",
     "EQUIPMENT": "Equipment",
