--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -77,7 +77,7 @@
     "SPELLS": "Spreuken"
   },
   "SUBJECT": {
-    "ATTRIBUTES": "Attributes",
+    "GENERAL": "Algemeen",
     "SKILLS": "Skills",
     "DIS_ADVANTAGES": "(Dis)Advantages",
     "EQUIPMENT": "Equipment",
