--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -29,8 +29,26 @@
   },
   "SHEET": {
     "ADVANTAGES": "Advantages",
+    "ATTRIBUTES": {
+      "ATTRIBUTES": "Attributes",
+      "STRENGTH": "Strength (ST)",
+      "DEXTERITY": "Dexterity (DX)",
+      "INTELLIGENCE": "Intelligence (IQ)",
+      "HEALTH": "Health (HT)",
+      "WILL": "Will",
+      "FRIGHT": "Freight check",
+      "SPEED": "Basic speed",
+      "MOVE": "Basic Move",
+      "PERCEPTION": "Perception",
+      "VISION": "Vision",
+      "HEARING": "Hearing",
+      "TASTE": "Taste & smell",
+      "TOUCH": "Touch",
+      "THR": "thr",
+      "SW": "sw"
+    },
     "DESCRIPTION": {
-      "AGE": "Leeftijd:",
+      "AGE": "Hoe lang je al leeft:",
       "BIRTHDAY": "Verjaardag:",
       "DESCRIPTION": "Omschrijving",
       "EYES": "Ogen:",
