--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -70,6 +70,25 @@
       "TITLE": "Titel:",
       "RELIGION": "Religie:"
     },
+    "HIT_LOCATION": {
+      "HIT_LOCATION": "Hit location",
+      "EYE": "Oog",
+      "SKULL": "Schedel",
+      "FACE": "Gezicht",
+      "RIGHT_LEG": "Rechter been",
+      "RIGHT_ARM": "Rechter arm",
+      "TORSO": "Torso",
+      "GROIN": "Kruis",
+      "LEFT_ARM": "Linker arm",
+      "LEFT_LEG": "Linker been",
+      "HAND": "Hand",
+      "FOOT": "Voet",
+      "NECK": "Nek",
+      "VITALS": "Organen",
+      "ROLL": "Roll",
+      "WHERE": "Waar",
+      "DR": "DR"
+    },
     "NOTES": "Notities",
     "PLAYER_INFORMATION": {
       "PLAYER_INFORMATION": "Speler Informatie",
