Added implementation for the advantages and disadvantages component

--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -28,7 +28,13 @@
     "SHEET_LOADED": "Character Sheet geladen: {{value}}"
   },
   "SHEET": {
-    "ADVANTAGES": "Advantages",
+    "ADVANTAGES": {
+      "ADVANTAGES": "Advantages",
+      "DISADVANTAGES": "Disadvantages",
+      "LEVEL": "Lvl",
+      "PTS": "Pts",
+      "REF": "Ref"
+    },
     "ATTRIBUTES": {
       "ATTRIBUTES": "Attributes",
       "STRENGTH": "Strength (ST)",
