--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -95,6 +95,19 @@
       "WHERE": "Where",
       "DR": "DR"
     },
+    "MAGIC": {
+      "SPELLS": "Spells",
+      "POINTS": "Pts",
+      "LEVEL": "Lvl",
+      "DIFFICULTY_LEVEL": "?",
+      "CASTING_TIME": "?",
+      "COLLEGES": "?",
+      "POWER_SOURCE": "?",
+      "DURATION": "?",
+      "MAINTENANCE_COST": "?",
+      "SPELL_CLASSES": "?",
+      "PAGE_REFERENCE": "Ref"
+    },
     "NOTES": "Notes",
     "PLAYER_INFORMATION": {
       "PLAYER_INFORMATION": "Player Information",
@@ -123,8 +136,7 @@
       "RSL": "RSL",
       "PTS": "Pts",
       "REF": "Ref"
-    },
-    "SPELLS": "Spells"
+    }
   },
   "SUBJECT": {
     "GENERAL": "General",
