Splitting up the advantages and disadvantages components

--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -99,13 +99,13 @@
       "SPELLS": "Spells",
       "POINTS": "Pts",
       "LEVEL": "Lvl",
-      "DIFFICULTY_LEVEL": "?",
-      "CASTING_TIME": "?",
-      "COLLEGES": "?",
-      "POWER_SOURCE": "?",
-      "DURATION": "?",
-      "MAINTENANCE_COST": "?",
-      "SPELL_CLASSES": "?",
+      "DIFFICULTY_LEVEL": "Difficulty",
+      "CASTING_TIME": "Time",
+      "COLLEGES": "Colleges",
+      "POWER_SOURCE": "Source",
+      "DURATION": "Duration",
+      "MAINTENANCE_COST": "Maintenance",
+      "SPELL_CLASSES": "Classes",
       "PAGE_REFERENCE": "Ref"
     },
     "NOTES": "Notities",
