Fixed some bugs that resulted from the swith to a config json in Local Storage

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,8 +8,7 @@
     "DELETE_DATA": {
       "HEADER": "Delete locally stored data",
       "SHEETS": "Stored Character Sheets",
-      "LANGUAGE": "Delete Language settings",
-      "THEME": "Delete Theme settings",
+      "SETTINGS": "Delete Settings",
       "DELETE": "Delete"
     },
     "OPEN_SHEET": {
