--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -29,8 +29,7 @@
     "ABOUT": "About",
     "OPEN": "Open sheet",
     "DARK_THEME": "Night mode",
-    "LANGUAGE": "Dutch",
-    "CLEAR_SETTINGS": "Clear settings",
+    "SETTINGS": "settings",
     "THROW_DICE": "Throw dice"
   },
   "MESSAGE": {
