Refactored the delete-settings-dialog into a settings-dialog

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -29,7 +29,7 @@
     "ABOUT": "About",
     "OPEN": "Open sheet",
     "DARK_THEME": "Night mode",
-    "SETTINGS": "settings",
+    "SETTINGS": "Settings",
     "THROW_DICE": "Throw dice"
   },
   "MESSAGE": {
