Added persistency for the serverUrl setting

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -7,12 +7,12 @@
     "ABOUT": {
       "ABOUT": "This application is for study purposes only. It is not affiliated to Steve Jackson Games. At this moment it does not aim to become a fully functional GURPS Character sheet editor/viewer. But then again, it is possible that it will be so one day. If that day comes we will contact Steve Jackson Games to figure out if this is legal, or how to make it so."
     },
-    "OK": "Yes",
+    "OK": "Ok",
     "CANCEL": "Cancel",
     "CLOSE": "Close",
     "SETTINGS": {
       "HEADER": "Settings",
-      "SERVER_URL": "CodyMcCodeBase url",
+      "SERVER_URL": "Server url",
       "SHEETS": "Stored Character Sheets",
       "DELETE_SETTINGS": "Delete Settings",
       "DELETE": "Delete"
