Added first steps into the library component

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -183,11 +183,12 @@
     }
   },
   "SUBJECT": {
-    "GENERAL": "General",
-    "SKILLS": "Skills",
     "DIS_ADVANTAGES": "(Dis)Advantages",
     "EQUIPMENT": "Equipment",
+    "GENERAL": "General",
+    "LIBRARY": "Library",
+    "MAGIC": "Magic",
     "NOTES": "Notes",
-    "MAGIC": "Magic"
+    "SKILLS": "Skills"
   }
 }
