Fixed the bug that broke the build and continued fiddling woth the settings.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -3,6 +3,13 @@
   "nl": "Dutch",
   "APPLICATION": "GurpsyMcGurpsFace",
   "VERSION": "0.1-SNAPSHOT",
+  "BOOK": {
+    "BOOK_0": "Gurps Basics 4th Edition",
+    "BOOK_1": "Gurps Magic 4th Edition",
+    "BOOK_2": "Gurps Powers 4th Edition",
+    "BOOK_3": "Gurps Psionics 4th Edition",
+    "BOOK_4": "Gurps Martial Arts 4th Edition"
+  },
   "DIALOG": {
     "ABOUT": {
       "ABOUT": "This application is for study purposes only. It is not affiliated to Steve Jackson Games. At this moment it does not aim to become a fully functional GURPS Character sheet editor/viewer. But then again, it is possible that it will be so one day. If that day comes we will contact Steve Jackson Games to figure out if this is legal, or how to make it so."
