Improved the layout of the component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,8 +38,8 @@
       "RETHROW": "Throw again"
     },
     "OPEN_SHEET": {
-      "FROM_FILE": "From file",
       "PREVIOUSLY": "Previously opened",
+      "SELECT_FROM_FILE": "Select a sheet",
       "HEADER": "Open Character Sheet"
     }
   },
