Continued work for roundtripping to gurpsDomain

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,9 +38,10 @@
       "RETHROW": "Throw again"
     },
     "OPEN_SHEET": {
+      "HEADER": "Open Character Sheet",
+      "INVALID_SHEET": "Invalid sheet",
       "PREVIOUSLY": "Previously opened",
-      "SELECT_FROM_FILE": "Select a sheet",
-      "HEADER": "Open Character Sheet"
+      "SELECT_FROM_FILE": "Select a sheet"
     }
   },
   "MENU": {
