Continued work on the settingsDialog

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,9 +26,8 @@
       "DELETE_SETTINGS": "Delete Settings",
       "HEADER": "Settings",
       "KILL": "Kill all in Local Storage",
-      "LIBRARY_SETTINGS": {
+      "REFERENCE_SETTINGS": {
         "HEADER": "Library Settings",
-        "BODY": "Configure your locally stored books to enable quick reference lookups. ",
         "FILE_LOCATION": "File location",
         "OFFSET": "Offset"
       },
